--- a/Main.xaml
+++ b/Main.xaml
@@ -7,7 +7,7 @@
 	x:Class="Firefly.Wpf.MenuDemo.Main"
 	x:Name="UserControl"
     
-    FontFamily="Roboto"
+    FontFamily="-apple-system"
     FontSize="14" d:DesignHeight="480" Width="899.625">
     <UserControl.DataContext>
         <MainMenu:TheMenu/>
@@ -18,11 +18,12 @@
             <ColumnDefinition Width="328"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <local:Menu x:Name="menu" HorizontalAlignment="Left" Margin="0" Grid.RowSpan="2" Width="328">
+        <local:Menu x:Name="menu" HorizontalAlignment="Left" Margin="0,10,0,10" Grid.RowSpan="2" Width="328">
         
         </local:Menu>
         <Border 
-            BorderBrush="white"
+             BorderBrush="#FFE1E1E1"
+            Margin="0,8,0,13" 
             BorderThickness="0,0,1,0"
             CornerRadius="0">
             <Border.Effect>
@@ -30,12 +31,12 @@
             </Border.Effect>
         </Border>
 
-        <Border Name="backBorder" CornerRadius="0" Margin="10" Grid.Column="1" Grid.RowSpan="2">
-            <Border.Effect>
-                <BlurEffect/>
-            </Border.Effect>
+        <Border Name="backBorder"  Margin="5,10,10,10" Grid.Column="1" Grid.RowSpan="2"  BorderThickness="0,1,1,1" BorderBrush="#FFE1E1E1" Background="White">
+            
+            
         </Border>
-        <StackPanel Grid.Column="1" Margin="20" Background="White">
+       
+        <StackPanel Grid.Column="1" Margin="20"  >
             <Image x:Name="LogoImage" Height="60" HorizontalAlignment="Left"/>
             <local:MRUList x:Name="mru" />
 
