--- a/Menu.xaml
+++ b/Menu.xaml
@@ -114,7 +114,7 @@
                     <RowDefinition Height="0.875*"/>
                     
                 </Grid.RowDefinitions>
-                <Rectangle Fill="#FFE91E63"></Rectangle>
+                <Rectangle Fill="{Binding TitleColor}"></Rectangle>
                 <ScrollViewer Grid.Row="1">
                     <ItemsControl Grid.Row="1" ItemsSource="{Binding LeftMenu.Items}" />
                 </ScrollViewer>
@@ -138,7 +138,7 @@
                 <ScrollViewer Grid.Row="1">
                     <ItemsControl Grid.Row="1" ItemsSource="{Binding MiddleMenu.Items}" />
                 </ScrollViewer>
-                <Rectangle Fill="#FFE91E63"></Rectangle>
+                <Rectangle Fill="{Binding TitleColor}"></Rectangle>
                 <Button x:Name="backButton"  HorizontalAlignment="Left" Margin="6.333,8,0,8" Width="37.667"   Click="backButton_Click" Background="#FFE91E63" Style="{DynamicResource BackButton}" RenderTransformOrigin="0.5,0.5" >
 
                 </Button>
@@ -162,7 +162,7 @@
                 <ScrollViewer Grid.Row="1">
                     <ItemsControl Grid.Row="1" ItemsSource="{Binding RightMenu.Items}" />
                 </ScrollViewer>
-                <Rectangle Fill="#FFE91E63"></Rectangle>
+                <Rectangle Fill="{Binding TitleColor}"></Rectangle>
                 <Button x:Name="backButton2"  HorizontalAlignment="Left" Margin="6.333,8,0,8" Width="37.667"   Click="backButton_Click" Background="#FFE3E3E3" Style="{DynamicResource BackButton}" RenderTransformOrigin="0.5,0.5" >
                    
 
